Add Features e Gallery

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,6 +21,10 @@ html{
     
 }
 
+h1,h2,h3{
+    text-transform: uppercase;
+}
+
 header{
 
     height: 100vh;
@@ -136,4 +140,67 @@ header h1{
 .btn-ghost:active{
     background-color: orange;
     color: white;
+}
+
+.section-features{
+    margin: 20px 10%;   
+}
+
+.section-features>div{
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.section-features h2{
+    margin-bottom: 20px;
+
+}
+
+.section-features h2::after{
+    content: " ";
+    height: 5px;
+    width: 100px;
+    background-color: orange;
+    display: block;
+    margin: 0 auto;
+    margin-top: 15px;
+}
+
+.section-features .long-copy{
+    line-height: 1.5rem;
+}
+
+.section-features ion-icon{
+    font-size: 40px;
+    color: orange;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 500,
+    'GRAD' 0,
+    'opsz' 60
+    
+  }
+
+.section-photos .image-showcase{
+    list-style: none;
+    width: 100%;
+}
+
+.section-photos .image-showcase li{
+    display: block;
+    float: left;
+    width: 25%;
+}
+
+.section-photos .photos{
+    width: 100%;
+    margin: 0;
+}
+
+.section-photos img{
+    width: 100%;
+    height: auto;
 }
